--- a/Core/UGUIDots.Core.asmdef
+++ b/Core/UGUIDots.Core.asmdef
@@ -12,7 +12,8 @@
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:a5baed0c9693541a5bd947d336ec7659",
-        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:b6125dfcacc74b0448e9ddc7cf2eb82c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
